--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -4,36 +4,43 @@ $blue: rgb(19, 78, 178);
 $grey: #cccccc;
 $black: #000000;
 $red: red; 
+$white: rgb(246, 243, 248);
 
 *
 {
     margin:0;padding:0;
 }
 
-html,body,.container
-{
+html,body,.container {
+
     height:100%;
 
+    img {
+    	width: 100%;
+    	height: auto;
+    }
+
 	header {
-	    background: transparent;
+	    background: green;
 	    height: 100px;
+	    display: table;
+  		width: 100%;
 		
 
-			.col-md-3
+	.logo
 	{
 	    display: table-cell;
-	    background: $blue;
-	    width: 25%;
-	    height: inherit;
+  		width: 15%;
+  		background-color: $blue;
 	}
 
-	.col-md-9
+	.mast
 	{
 	    display: table-cell;
-	    background: blue;
-	    width: 75%;
-   	    height: inherit;
+  		background-color: $white;
+  		width: 85%;
 	}
+	
 
 
 		}
@@ -46,7 +53,7 @@ html,body,.container
     display:table;
     width: 100%;
     margin-top: -50px;
-    /* padding-top: 50px; */
+    padding-top: 50px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding-left: 0px;
@@ -58,28 +65,33 @@ html,body,.container
 	    height: 100%;
 	    display: table-row;
 	}
-	.col-md-3.no-float, .col-md-6.no-float, .col-md-9.no-float  {
+	.col-md-2.no-float, .col-md-8.no-float {
 	    float: none; /* thanks baxabbit */
 	}
-	.col-md-3
+	.col-md-2
 	{
 	    display: table-cell;
 	    background: pink;
-	    width: 25%;
+	    width: 15%;
 	}
-	.col-md-6
+
+	#sidebar {
+		background: $white;
+	}
+
+	.col-md-8
 	{
 	    display: table-cell;
 	    background: yellow;
-	    width: 50%;
+	    width: 70%;
 	}
 
-	.col-md-9
+	/*.col-md-9
 	{
 	    display: table-cell;
 	    background: blue;
 	    width: 75%;
-	}
+	}*/
 }
 
 
