--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,10 +1,3 @@
-/*something*/
-
-$blue: rgb(19, 78, 178);
-$grey: #cccccc;
-$black: #000000;
-$red: red; 
-$white: rgb(246, 243, 248);
 
 *
 {
@@ -21,77 +14,60 @@ html,body,.container {
     }
 
 	header {
+
 	    background: green;
-	    height: 100px;
+	    height: auto;
 	    display: table;
   		width: 100%;
 		
-
-	.logo
-	{
-	    display: table-cell;
-  		width: 15%;
-  		background-color: $blue;
+  	.row {
+	display: table-row;
 	}
-
-	.mast
-	{
-	    display: table-cell;
-  		background-color: $white;
-  		width: 85%;
 	}
-	
-
-
-		}
-
 }
 
-
-.container
-{
+.container{
     display:table;
     width: 100%;
-    margin-top: -50px;
-    padding-top: 50px;
+    /*margin-top: -50px;
+    padding-top: 50px;*/
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding-left: 0px;
     padding-right: 0px; 
-	
 
 	.row
 	{
 	    height: 100%;
 	    display: table-row;
+	
+	.col-md-2.no-float, .col-md-7.no-float, .col-md-3.no-float {
+	    float: none;
 	}
-	.col-md-2.no-float, .col-md-8.no-float {
-	    float: none; /* thanks baxabbit */
-	}
+
 	.col-md-2
 	{
 	    display: table-cell;
-	    background: pink;
 	    width: 15%;
 	}
 
-	#sidebar {
-		background: $white;
-	}
-
-	.col-md-8
+	.col-md-7
 	{
 	    display: table-cell;
-	    background: yellow;
-	    width: 70%;
+	    background: white;
+	    width: 60%;
 	}
 
-	/*.col-md-9
+	.col-md-3
 	{
 	    display: table-cell;
-	    background: blue;
-	    width: 75%;
-	}*/
+	    width: 25%;
+	}
+	
+	}
+
 }
 
-
+@import "colours";
+@import "typography";
+@import "modules";
