--- a/app/scss/_colours.scss
+++ b/app/scss/_colours.scss
@@ -1,7 +1,31 @@
 $blue: #1565c0;
-$grey: #cccccc;
+$grey: #eeeeee;
 $darkgrey: #353a44;
 $black: #000000;
-$white: rgb(246, 243, 248);
-$grey: #a6aaa9;
+$white: #fafafa;
+/*$grey: #a6aaa9;*/
 $textgrey: #5c6169;
+$green: #cdde4a;
+$teal: #4db6ad;
+$purple: #aa38ff;
+
+
+.blue {
+	color: $blue;
+}
+
+.bg-grey {
+	background-color: $grey;
+}
+
+.green {
+	color: $green;
+}
+
+.teal {
+	color: $teal;
+}
+
+.purple {
+	color: $purple;
+}
