--- a/app/scss/_modules.scss
+++ b/app/scss/_modules.scss
@@ -1,24 +1,49 @@
-.logo
+#logo
 {
 	    display: table-cell;
   		width: 15%;
   		background-color: $blue;
 }
 
-.mast
+#mast
 {
 	    display: table-cell;
   		background-color: $white;
   		width: 60%;
+  		
+  		.campaign {
+  		padding-left:15px;
+  			.grey {
+  				color: $grey;
+  			}
+  		}
+
+  		.live-glyph {
+  			width: 25px; 
+  		}
+  		#mobile-menu {
+  			margin-left: 15px;
+  			display:none;
+  		}
 
 }
 
-.reporting
+#reporting {
 
-{
+		.btn {
+			border-radius: 0px; 
+			width: 75%;
+		}
+
 	    display: table-cell;
   		background-color: $white;
   		width: 25%;
+
+  		.dropdown {
+  			.report-glyph {
+  				width: 25px;
+  			}
+  		}
 
 }
 
@@ -31,6 +56,20 @@
 		padding: 0px;
 		vertical-align: top; 
 
+		#main-list {
+			li {
+				font-size: 12px;
+				padding: 10px;
+			}
+			.active {
+				background: $black;
+				color: $white;
+				.float-right {
+					float:right;
+					color: $grey;
+				}
+			}
+		}
 		.dropdown {
 			.btn.btn-default{
 				width: 100%;
@@ -47,34 +86,78 @@
 		}
 
 		#graph {
+			img {
+				padding-left: 15px; 
+   				padding-right: 20px;
+			}
+		}
 
+		#demographic {
+			small {
+				margin-left: 15px;
+			}
 		}
 
 		#explore {
+			margin-left: 15px;
+			padding-left: 0px;
 			.nav-tabs {
 			border-bottom: 0px;
 			}
 			.row {
 			display: block;
+			margin-left: 0px; 
 			}
+			.explore-glyph, .stats-glyph {
+				width: 25px;
+			}
+
 			#explore--item {
-					.item {
-					p {
-						display: inline-flex;
-						margin-bottom: 0px;
+					  font-size: 12px; 
+					  border: 1px solid #ddd;
+					  padding-left: 0px;
+					  padding-right: 0px;
+					  margin-right: 7px;
+					  max-width: 31%;
+  				      height: 340px;
+					  background-color: $white;
+					
+					#dayparts {
+						width: 100%;
 					}
+
+					span {
+						float:left; 
+					}
+
+					.item {
+						padding-left: 15px;
+						
+						.row {
+							width: 100%;
+							margin-bottom: 10px;
+						}
+
+						p {
+							display: inline-flex;
+							margin-bottom: 0px;
+							display:inline-block;
+							float:left;
+						}
 
 					.progress {
 						  width: 80px;
 						  height: 10px;
 						  display: inline-flex;
+						  display:inline-block;
+						  float: left;
 						  margin-bottom: 0px;
+						  border-radius: 0px;
 					}
-					.bg-grey {
+					.bg-lightgrey {
 						display: inline-flex;
 						p {
 							margin-bottom: 0px;
-
 						}
 					}			
 				}
@@ -83,6 +166,9 @@
 	}
 
 #content, #sidebar {
+	.btn {
+		border-radius: 0px; 
+	}
 		padding-left: 0px;
 		padding-right: 0px;
 	}
@@ -93,16 +179,47 @@
 
 		#scope {
 
+		
+		padding-left: 0px; 
+		
+		.btn-group {
+			display: block;
+			.scope-btn {
+				width: 80%;
+			}
+		}
+
+		/*.btn-group {
+			width: 100%; 
+
+			button {
+				width: inherit;
+				span {
+					float: right;
+					}
+				}
+			}*/
 		}
 
 		#parameter {
 			.para-item {
+				margin-left: 15px;
+				font-size: 12px; 
+
 				p, .progress {
 					display: inline-flex;
+					display: inline-block;
 				}
 				.progress {
 					width: 80px;
   					height: 10px;
+  					margin-bottom:0px;
+  					border-radius: 0px;
+				}
+				.row {
+					span {
+						margin-left: 15px; 
+					}
 				}
 
 			}
